# ProPath

./: .gitignore  CMakeLists.txt  DOCUMENTATION.md  README.md  build.sh  install_eigen.sh  rebuild.sh
applications/: CMakeLists.txt
applications/MPP/: CMakeLists.txt  mpp.cpp  trial.json
applications/MPP/include/: json_reader.hpp
applications/double_gyre/: CMakeLists.txt  README.md  double_gyre.cpp
applications/integration_double_gyre/: CMakeLists.txt  README.md  integration_dg.cpp
applications/integration_double_gyre/include/: observer.hpp  system.hpp
include/: containers.hpp  dijkstra.hpp  io.hpp  utils.hpp
src/: containers.cpp  dijkstra.cpp  io.cpp  utils.cpp
test/: CMakeLists.txt  test_dijkstra.cpp
test/containers/: CMakeLists.txt  test_Mat_access.cpp  test_Mat_prod_access.cpp  test_Mat_vector.cpp
